--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ nav {
     background-color: rgb(255, 177, 61);
     height: 150px;
     padding: 0px;
-    margin: 0px;
+    margin: 0px 0px 3px 0px;
 }
 
 .navContent {
@@ -35,4 +35,30 @@ nav {
     color: black;
     padding-left: 30px;
     font-size: 20px;
+    font-weight: 500;
+}
+
+#firstImage {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    position: relative;
+    width: 100%;
+    height: 750px;
+    overflow: hidden;
+}
+
+#firstImage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#firstImage p {
+    background-color: white;
+    position: absolute;
+    font-size: 40px;
+    font-weight: 900;
+    padding: 10px 20px 10px 20px;
+    margin-bottom: 120px;
 }
