--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ nav {
     justify-content: space-between;
     width: 1200px;
     height: 300px;
+    padding-top: 30px;
 }
 
 #segment1Images img {
@@ -100,10 +101,146 @@ nav {
 #segment1ImagesText {
     display: flex;
     justify-content: space-between;
+    padding-bottom: 30px;
 }
 
 #segment1ImagesText p {
     font-size: 20px;
     padding-left: 40px;
     padding-right: 30px;
+    font-weight: 600;
+}
+
+#segment2 {
+    width: 100%;
+    background-color: rgb(221, 227, 255);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+#segment2Text {
+    width: 1200px;
+}
+
+#segment2Text h2 {
+    width: 1200px;
+    font-size: 30px;
+    font-weight: 900;
+    padding-top: 20px;
+}
+
+#segment2 p {
+    font-size: 24px;
+}
+
+#segment2Images {
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+    height: 300px;
+    padding-top: 30px;
+}
+
+#segment2Images img {
+    width: 250px;
+    height: 200px;
+    object-fit: cover;
+}
+
+#segment2Images p {
+    background-color: white;
+    margin: 0px;
+    padding: 0px;
+    font-size: 20px;
+    width: 100%;
+    text-align: center;
+    padding: 14px 0px;
+    font-weight: 600;
+}
+
+.item {
+    width: 250px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#segment3 {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 70px;
+}
+
+#segment3Text {
+    width: 1200px;
+}
+
+#segment3Text h2 {
+    width: 1200px;
+    font-size: 30px;
+    font-weight: 900;
+    padding-top: 20px;
+}
+
+#segment3 p {
+    font-size: 24px;
+}
+
+#segment3Images {
+    display: flex;
+    justify-content: space-between;
+    width: 1200px;
+    padding-top: 30px;
+}
+
+#segment3Images div {
+    width: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#segment3Images img {
+    width: 350px;
+    height: 300px;
+    object-fit: cover;
+    border: 7px solid rgb(221, 227, 255);;
+}
+
+#segment3Images p {
+    background-color: white;
+    margin: 0px;
+    padding: 0px;
+    font-size: 20px;
+    width: 100%;
+    text-align: center;
+    padding: 14px 0px;
+    font-weight: 600;
+}
+
+#footer {
+    background-color: rgb(255, 177, 61);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 240px;
+}
+
+#footerLinks {
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px 0px 30px 10px;
+}
+
+#footerLinks a {
+    text-decoration: none;
+    color: black;
+    padding-left: 20px;
+    font-weight: 500;
 }
