--- a/css/style.css
+++ b/css/style.css
@@ -411,3 +411,20 @@ ol p {
     margin: 0px;
     font-weight: 700;
 }
+
+.video-container {
+    position: relative;
+    width: 100%;
+    max-width: 800px; /* Set a maximum width */
+    margin: 0 auto; /* Center the video */
+    aspect-ratio: 16 / 9; /* Maintain aspect ratio */
+    margin-bottom: 30px;
+}
+.video-container iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    border: none; /* Remove iframe border */
+}
